// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`station-properties-panel matches snapshot 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
  >
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <div
        class="bp4-non-ideal-state-visual"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-select"
          icon="select"
          tabindex="-1"
        >
          <svg
            data-icon="select"
            height="60"
            viewBox="0 0 20 20"
            width="60"
          >
            <path
              d="M19.71 18.29l-4.25-4.25L20 12.91 9.93 9.33c.04-.1.07-.21.07-.33V3c0-.55-.45-1-1-1H4V1c0-.55-.45-1-1-1S2 .45 2 1v1H1c-.55 0-1 .45-1 1s.45 1 1 1h1v5c0 .55.45 1 1 1h6c.12 0 .23-.03.34-.07L12.91 20l1.14-4.54 4.25 4.25c.17.18.42.29.7.29a1.003 1.003 0 00.71-1.71zM8 8H4V4h4v4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <h4
        class="bp4-heading"
      >
        No Station Selected
      </h4>
      <div>
        Select a station in the Waveform or Map Display to view station properties
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot 1 station 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
  >
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <div
        class="bp4-non-ideal-state-visual"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-exclude-row"
          icon="exclude-row"
          tabindex="-1"
        >
          <svg
            data-icon="exclude-row"
            height="60"
            viewBox="0 0 20 20"
            width="60"
          >
            <path
              d="M1 3h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zM0 13a1.003 1.003 0 001.71.71L4 11.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L5.41 10 7.7 7.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L4 8.59l-2.29-2.3A1.003 1.003 0 00.29 7.71L2.59 10 .3 12.29c-.19.18-.3.43-.3.71zm18-5h-7c-1.1 0-2 .9-2 2s.9 2 2 2h7c1.1 0 2-.9 2-2s-.9-2-2-2zm1 9H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <h4
        class="bp4-heading"
      >
        No Operational Time Period
      </h4>
      <div>
        Operational time period has not loaded
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot multiple stations 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
  >
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <div
        class="bp4-non-ideal-state-visual"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-exclude-row"
          icon="exclude-row"
          tabindex="-1"
        >
          <svg
            data-icon="exclude-row"
            height="60"
            viewBox="0 0 20 20"
            width="60"
          >
            <path
              d="M1 3h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zM0 13a1.003 1.003 0 001.71.71L4 11.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L5.41 10 7.7 7.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L4 8.59l-2.29-2.3A1.003 1.003 0 00.29 7.71L2.59 10 .3 12.29c-.19.18-.3.43-.3.71zm18-5h-7c-1.1 0-2 .9-2 2s.9 2 2 2h7c1.1 0 2-.9 2-2s-.9-2-2-2zm1 9H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <h4
        class="bp4-heading"
      >
        Multiple Stations Selected
      </h4>
      <div>
        Select a single station to view station properties
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot no stations 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
  >
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <div
        class="bp4-non-ideal-state-visual"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-exclude-row"
          icon="exclude-row"
          tabindex="-1"
        >
          <svg
            data-icon="exclude-row"
            height="60"
            viewBox="0 0 20 20"
            width="60"
          >
            <path
              d="M1 3h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zM0 13a1.003 1.003 0 001.71.71L4 11.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L5.41 10 7.7 7.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L4 8.59l-2.29-2.3A1.003 1.003 0 00.29 7.71L2.59 10 .3 12.29c-.19.18-.3.43-.3.71zm18-5h-7c-1.1 0-2 .9-2 2s.9 2 2 2h7c1.1 0 2-.9 2-2s-.9-2-2-2zm1 9H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <h4
        class="bp4-heading"
      >
        Multiple Stations Selected
      </h4>
      <div>
        Select a single station to view station properties
      </div>
    </div>
  </div>
</div>
`;
